2013-11-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-filter.el (w3m-filter-subst-disabled-with-readonly): Rewrite.

	* w3m-filter.el (w3m-filter-subst-disabled-with-readonly):
	Fix the width of disabled select form.

2013-11-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-filter.el (w3m-filter-subst-disabled-with-readonly): Replace
	disabled or readonly select forms, that w3m doesn't support, with
	read-only input forms.  [emacs-w3m:12222]

	* w3m-form.el (w3m-form-parse-and-fontify): Make read-only text buttons
	for image, reset, and submit forms if readonly attr is turned on.

	* w3m-ems.el, w3m-form (w3m-form-make-button): Add the optional
	readonly argument; make a read-only text button if it is non-nil.

2013-11-20  Katsumi Yamaoka  <yamaoka@jpl.org>

	Make non-link urls unbreakable.  [emacs-w3m:12215]

	* w3m.el (w3m-markup-urls-nobreak): New function.
	(w3m-rendering-buffer): Use it.

2013-10-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	Simplify the tab line control so as not to consume CPU.
	Thanks to Michael Heerdegen for good suggestions.

	* w3m-ems.el (w3m-tab-line-format, w3m-tab-timer): Abolish.
	(w3m-tab-mouse-track-selected-tab): Run `w3m-tab-line' instead of using
	its cache; remove unused argument `buffers'.
	(w3m-tab-line): Don't use chache and timer.

2013-10-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	Replace `w3m-external-view-current-url', `w3m-external-view-this-url',
	and `w3m-view-url-with-external-browser' with
	`w3m-view-url-with-browse-url' that runs `browse-url'. [emacs-w3m:12190]

	* w3m.el (w3m-menubar, w3m-tab-button-menu-commands, w3m-link-map): Do.
	(w3m-external-view-current-url, w3m-external-view-this-url)
	(w3m-view-url-with-external-browser): Make obsolete.
	(w3m-view-url-with-browse-url): New function.
	(w3m-mode-map): Bind "M" to it.

	* w3m-lnum.el (w3m-lnum-actions-link-alist): Bind "M" to
	w3m-view-url-with-browse-url instead of w3m-external-view.
	(w3m-lnum-mode-map): Use the key bound to w3m-view-url-with-browse-url