@@ -1,3 +1,13 @@
+2013-12-01  Tatsuya Kinoshita  <tats@vega.ocn.ne.jp>
+
+	* mew-w3m.el (mew-w3m-region): Set point to minimum for
+	`mew-w3m-cite-blockquote' to work.
+
+2013-11-05  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* mew-w3m.el (mew-w3m-cite-blockquote): New function.
+	(mew-w3m-region): Use it.
+
 2013-11-26  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* w3m-filter.el (w3m-filter-subst-disabled-with-readonly): Rewrite.
